The update method for ClientService and EmployeeService services has been improved to allow password change and add email update verification.